vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity_declaration__tests__entity_statement_part_rejects_non_passive_statement.snap
---
source: vhdl_syntax/src/parser/productions/entity_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
entity myent is
begin
  sig <= '0';
end entity;

== tree ==
EntityDeclaration
  EntityDeclarationPreamble
    Keyword(Entity)
    Identifier 'myent'
    Keyword(Is)
  EntityStatements
    DeclarationStatementSeparator
      Keyword(Begin)
    EntityStatementPart
      ConcurrentSimpleSignalAssignment
        NameTarget
          Name
            NameDesignatorPrefix
              Identifier 'sig'
        LTE
        WaveformElements
          WaveformElement
            LiteralExpression
              CharacterLiteral ''0''
        SemiColon
  EntityDeclarationEpilogue
    Keyword(End)
    Keyword(Entity)
    SemiColon

== diagnostics ==
3:3..3:14 Unexpected(Node(ConcurrentSimpleSignalAssignment))
