vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity_declaration__tests__parse_entity_with_empty_generics.snap
---
source: vhdl_syntax/src/parser/productions/entity_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
entity my_ent is
    generic();
begin
end my_ent;


== tree ==
EntityDeclaration
  EntityDeclarationPreamble
    Keyword(Entity)
    Identifier 'my_ent'
    Keyword(Is)
  EntityHeader
    GenericClause
      Keyword(Generic)
      LeftPar
      RightPar
      SemiColon
  EntityStatementPart
    DeclarationStatementSeparator
      Keyword(Begin)
  EntityDeclarationEpilogue
    Keyword(End)
    Identifier 'my_ent'
    SemiColon

== diagnostics ==
2:13 Expected([Token(Keyword(Signal)), Token(Keyword(Constant)), Token(Keyword(Variable)), Token(Identifier), Token(Keyword(File)), Token(Keyword(Type)), Token(Keyword(Function)), Token(Keyword(Procedure)), Token(Keyword(Impure)), Token(Keyword(Pure)), Token(Keyword(Package))])
