vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity_declaration__tests__parse_entity_with_ports.snap
---
source: vhdl_syntax/src/parser/productions/entity_declaration.rs
expression: "to_test_text(Parser::entity_declaration,\n\"\\\nentity my_ent is\n    port();\nbegin\nend my_ent;\n\",)"
---
EntityDeclaration
  EntityDeclarationPreamble
    Keyword(Entity)
    Identifier 'my_ent'
    Keyword(Is)
  EntityHeader
    PortClause
      Keyword(Port)
      LeftPar
      RightPar
      SemiColon
  Keyword(Begin)
  EntityDeclarationEpilogue
    Keyword(End)
    Identifier 'my_ent'
    SemiColon
